Upgraded to Spring Boot 3.2.x and JDK 21